# mediainfo

./: Cargo.toml  README.md  mediainfo.sh  mediainfo.tmpl  videoinfo.sh
src/: main.rs
