[package]
name = "mediainfo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
dirs = "5.0"
once_cell = "1.18"
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
twox-hash = "1.6"
walkdir = "2.4"
